<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.cmfbi.fragments.EditFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/saveUser"
            android:layout_width="178dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/saveButton"
            android:theme="@style/PrimaryButton"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/takeASnap"
            android:layout_width="167dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/changeUserPicBtn"
            android:theme="@style/PrimaryButton"
            android:visibility="visible"
            app:layout_constraintStart_toEndOf="@+id/saveUser"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="304dp"
            android:layout_height="39dp"
            android:layout_marginEnd="68dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:ems="10"
            android:inputType="textShortMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintStart_toEndOf="@+id/nameTextView"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1">

            <requestFocus />

        </EditText>


        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="49dp"
            android:layout_height="26dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:gravity="top"
            android:text="@string/userNameLbl"
            android:textColor="@color/appFontColor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintBaseline_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <ImageView
            android:id="@+id/userImg"
            android:layout_width="369dp"
            android:layout_height="377dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="fav"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameEditText"
            tools:ignore="HardcodedText" />


    </android.support.constraint.ConstraintLayout>

</FrameLayout>
