<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.cmfbi.fragments.EditFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/unfriendUser"
            android:layout_width="113dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/unfriendUserBtn"
            android:theme="@style/PrimaryButton"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/friendProgressBar"
            app:layout_constraintTop_toBottomOf="@+id/userNameLbl" />

        <Button
            android:id="@+id/friendUser"
            android:layout_width="113dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/friendUserBtn"
            android:theme="@style/PrimaryButton"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/friendProgressBar"
            app:layout_constraintTop_toBottomOf="@+id/userNameLbl" />

        <TextView
            android:id="@+id/userNameLbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="User Name"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/userImg"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />


        <ImageView
            android:id="@+id/userImg"
            android:layout_width="105dp"
            android:layout_height="87dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="fav"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/userPostsTxt"
            style="@style/banner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/recentAddedPostsHeaderLbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/friendUser" />

        <FrameLayout
            android:id="@+id/userDetailsFrame"
            android:layout_width="match_parent"
            android:layout_height="329dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/recentAddedBarTextView"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recentAddedBarTextView" />

        <ProgressBar
            android:id="@+id/userProfileImgProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="74dp"
            android:layout_height="62dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/friendProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/userImg"
            app:layout_constraintTop_toBottomOf="@+id/userNameLbl" />

        <TextView
            android:id="@+id/selfFriendTextView"
            android:layout_width="179dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/selfFriendLbl"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/friendProgressBar"
            app:layout_constraintTop_toBottomOf="@+id/userNameLbl" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
